elastic-stack/fleet-apm.yaml

apiVersion: v1
kind: Service
metadata:
  name: ${APM_FLEET_SERVICE_NAME}
  namespace: ${ELASTIC_STACK_NAMESPACE}
spec:
  selector:
    agent.k8s.elastic.co/name: ${ELASTIC_AGENT_NAME}
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 8200
