elastic-stack/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: ${ELASTIC_STACK_NAMESPACE}
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-local
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-public
  hostnames:
  - ${KIBANA_HOST}
  - ${KIBANA_PUBLIC_HOST}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ${KIBANA_SERVICE_NAME}
      port: 5601

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apm-server
  namespace: ${ELASTIC_STACK_NAMESPACE}
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-local
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-public
  hostnames:
  - ${APM_HOST}
  - ${APM_PUBLIC_HOST}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ${APM_SERVICE_NAME}
      port: 8200
